# learning_utest

./: .cproject  CMakeLists.txt  README.adoc
cmake/modules/: gmock.cmake
components/: CMakeLists.txt
components/Soundex/: CMakeLists.txt
components/Soundex/includes/: Soundex.h
components/Soundex/test/: SoundexTest.cpp
components/ToDo/: CMakeLists.txt
components/ToDo/includes/: ToDo.h
components/ToDo/test/: ToDoTest.cc
components/printer/: CMakeLists.txt
doc/: BookReview.adoc
src/: CMakeLists.txt  ToDo.cc  main.cc  main.cpp
